--- a/firebase.json
+++ b/firebase.json
@@ -3,24 +3,20 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "public": "./build",
+    "cleanUrls": true,
     "rewrites": [
       {
-        "source": "**",
+        "source": "**/*",
         "destination": "/index.html"
       }
+    ],
+    "ignore": [
+      "/test/**",
+      "bower.json",
+      "database.rules.json",
+      "firebase.json",
+      "README.md"
     ]
-  },
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
-  "storage": {
-    "rules": "storage.rules"
   }
 }
